MDEV-8830: Weird output in the error log

Remove debug printout that was accidentally left in place